@@ -1,4 +1,4 @@
-.TH OpenVAS-MKCERT 8 "September 2001" "The OpenVAS Project" "User Manuals"
+.TH OpenVAS-MKCERT 8 "January 2011" "The OpenVAS Project" "User Manuals"
 .SH NAME
 openvas-mkcert \- Creates a scanner certificate
 .sp
@@ -9,8 +9,8 @@ openvas-mkcert \- Creates a scanner certificate
 .SH DESCRIPTION
 
 The 
-.B OpenVAS Security Scanner
-protects the communication between the client and the scanner by using SSL. SSL
+.B OpenVAS Scanner
+protects its communication with clients by using SSL. SSL
 requires the scanner to present a certificate to the client, and the client can
 optionally present a certificate to the scanner.
 
@@ -38,14 +38,9 @@ http://www.openvas.org/
 .UE
 (Official site)
 .br
-.UR
-http://cvs.openvas.org/
-.UE
-(Developers site)
-.RE
 
 .SH AUTHOR
 
 .B openvas-mkcert
-was written by Michel Arboi <arboi@alussinan.org> and Renaud
-Deraison <deraison@cvs.nessus.org>
+was derived from nessus-mkcert which is was written by Michel
+Arboi <arboi@alussinan.org> and Renaud Deraison <deraison@cvs.nessus.org>
